--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,9 @@
-Django==5.1.7
-django-cors-headers==4.7.0
-django-extensions==3.2.3
-django-storages==1.14.5
-djangorestframework==3.15.2
-djangorestframework_simplejwt==5.5.0
-frozenlist==1.5.0
-packaging==24.2
-pillow==11.1.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-magic-bin==0.4.14
-realtime==2.4.2
-supabase==2.15.0
+Django==4.2.7
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
+django-cors-headers==4.3.1
+psycopg2-binary==2.9.9
+Pillow==10.1.0
+supabase==2.3.1
+python-dotenv==1.0.0
+python-magic==0.4.27
