--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,13 @@ Pillow==10.1.0
 supabase==2.3.1
 python-dotenv==1.0.0
 python-magic==0.4.27
-django-extensions
-django-storages==3.14.0
-boto3==1.28.57
+django-extensions==4.1
+django-storages==1.14.0
+boto3==1.34.57
+asgiref==3.8.1
+httpcore==1.0.8
+httpx==0.25.2
+PyJWT==2.10.1
+python-dateutil==2.9.0.post0
+typing-extensions==4.13.2
+websockets==12.0
